software/configuration/service-mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-gateway
  namespace: istio-system
spec:
  selector:
    istio: istio-ingressgateway-internal
  servers:
  - port:
    number: 80
    name: http
    protocol: HTTP
    hosts:
    - "*"    
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: external-gateway
  namespace: istio-system
spec:
  selector:
    istio: istio-ingressgateway-external
  servers:
  - port:
    number: 80
    name: http
    protocol: HTTP
    hosts:
    - "*"
  # - port:
  #   number: 443
  #   name: https
  #   protocol: HTTPS
  #   hosts:
  #   - "*"
  #   tls:
  #     mode: SIMPLE
  #     credentialName: your-ssl-cert-name
